Fix Grid sizing/spacing issue using ngStyle

--- a/client/src/app/grid/grid.component.scss
+++ b/client/src/app/grid/grid.component.scss
@@ -4,12 +4,12 @@
   grid-gap:0px;
 }
 
-.grid-list-container {
-  // height: 400px;
-  // width: 400px;
-}
+// .grid-list-container {
+//   // height: 400px;
+//   // width: 400px;
+// }
 
-.grid-tile {
-  height: 40px;
-  width: 40px;
-}
+// .grid-tile {
+//   height: 40px;
+//   width: 40px;
+// }
